# vlc-plugin-subtitles

./: CMakeLists.txt  README.md
src/: subtitles.c
